--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
+    "@heroui/spinner": "^2.2.12",
+    "@heroui/system": "^2.4.11",
+    "@heroui/theme": "^2.4.11",
     "@prisma/client": "^6.3.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-21e868a-20250216",
+    "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "next-cloudinary": "^6.16.0",
     "prisma": "^6.3.1",
