made some modification

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.10.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
